<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistrationActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/labeled_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:layout_marginTop="@dimen/_20dp"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/editext_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginStart="@dimen/_40dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_40dp"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_5dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/labeled_registration"/>

        <EditText
            android:id="@+id/editext_passsword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/_40dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginRight="@dimen/_40dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_5dp"
            android:paddingEnd="@dimen/_5dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/editext_username"/>

        <EditText
            android:id="@+id/editext_emailAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/_40dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginRight="@dimen/_40dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_5dp"
            android:paddingEnd="@dimen/_5dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/editext_passsword"/>

        <Spinner
            android:id="@+id/editext_city"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginLeft="@dimen/_40dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginRight="@dimen/_40dp"
            android:background="@drawable/rounded_cornor"
            android:hint="@string/enter_city"
            android:paddingStart="@dimen/_5dp"
            android:paddingEnd="@dimen/_5dp"
            android:textColor="@color/color_purple"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/editext_emailAddress"/>
        <CheckBox
            android:visibility="visible"
            android:id="@+id/checkbox_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40dp"
            android:layout_marginTop="@dimen/_20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingStart="@dimen/_5dp"
            android:paddingEnd="@dimen/_5dp"
            android:text="@string/updates_want"
            app:layout_constraintTop_toBottomOf="@id/editext_city"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40dp"
            android:layout_marginTop="@dimen/_20dp"
            android:orientation="horizontal"
            android:visibility="visible"
            android:id="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_updates"
            app:layout_constraintStart_toStartOf="parent">
            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5dp"
                android:paddingEnd="@dimen/_5dp"
                android:text="@string/male"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5dp"
                android:paddingEnd="@dimen/_5dp"
                android:text="@string/female"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:checked="false" />
        </RadioGroup>
        <Button
            android:id="@+id/button_login"
            android:layout_marginLeft="@dimen/_40dp"
            android:layout_marginRight="@dimen/_40dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/_25dp"
            android:visibility="visible"
            android:layout_marginTop="@dimen/_20dp"
            android:padding="@dimen/_5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>